# CuZr-MD-DMS

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile.cuzr_mddms_base
docs/: README_mddms_pilot_runner.md  data_policy.md  postprocessing.md  project_plan.md  runtime_policy.md
env/: environment.yml
scripts/analysis/: analyze_mddms_response.py
scripts/cloud/:  startup_mddms_runtime.sh  check_mddms_runtime.sh  check_runtime.sh  fetch_models.sh  run_mddms_container.sh  startup_build_lammps_mddms.sh  startup_mddms_runtime.sh  startup_mddms_runtime_single.sh
scripts/run/: paper2_revision_runner.py  run_mddms_pilot.py
